# limi_bot

./: .env.example  .gitignore  ARCHITECTURE.md  HELLO_CI_ANALYSIS.md  README.md
aomi-app/: .gitignore  Cargo.toml  aomi.toml
aomi-app/src/: client.rs  lib.rs  tool.rs
docs/: blog-post.md  branding.md  demo-script.md
telegram-bot/: .env.example  package-lock.json  package.json
telegram-bot/src/: format.ts  index.ts
telegram-bot/src/commands/: briefing.ts  explain.ts  help.ts  markets.ts  positions.ts  start.ts  watch.ts
telegram-bot/src/db/: index.ts
telegram-bot/src/limitless/: api.ts  watcher.ts
